# score-arranger

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  NOTICE.md  PRIVACY.md  README.md  SECURITY.md  SOURCE.md  THIRD_PARTY_LICENSES.md  biome.json  difficulty-loop-plan.md  electron-builder.yml  integration-roadmap-planning.html  landing-planning.html  opensource-strategy-planning.html  package-lock.json  package.json  release-mac.sh  tsconfig.json  tsconfig.main.json  violin-difficulty-planning.html  visual-fx-planning.html  vite.config.mts  vitest.config.ts
engine/: freeze.sh  pyproject.toml
engine/core/: __init__.py  arrangement_model.py  arranger.py  brass_endurance.py  breath_marks.py  cli.py  difficulty.py  difficulty_control.py  enrich.py  explainer.py  ir.py  ir_serialize.py  ir_to_music21.py  ir_to_musicxml.py  ir_validate.py  llm_eval.py  mcp_server.py  musicxml_supplement.py  musicxml_writer.py  parser.py  pianistic.py  pitch_util.py  quality.py  repair.py  samples.py  server.py  simplify.py  style_presets.py  transcriber.py  validator_dynamic.py  voice_filler.py  voice_leading.py  voice_leading_dp.py
engine/core/amt/: __init__.py  basic_pitch.py
engine/core/analyzer/: __init__.py  function.py  harmony.py  harmony_function.py  melody.py  phrase.py  rehearsal_marks.py
engine/core/baroque/: __init__.py  continuo.py  figured_bass_parser.py
engine/core/evaluation/: __init__.py  chorale_groundtruth.py  phrase_eval.py
engine/core/instruments/: __init__.py  base.py  brass.py  canonical.py  cello.py  double_bass.py  fingering.py  fretted_plucked.py  guitar.py  harp.py  harpsichord.py  lute.py  piano.py  registry.py  viola.py  violin.py  voice.py  woodwinds.py
engine/core/omr/: __init__.py  audiveris.py
engine/core/sample_scores/: bach_bwv1-6.musicxml  bach_bwv1007_1_prelude.musicxml  bach_bwv1007_2_allemande.musicxml  bach_bwv1007_3_courante.musicxml  bach_bwv1007_4_sarabande.musicxml  bach_bwv1007_5_menuet1.musicxml  bach_bwv1007_6_menuet2.musicxml  bach_bwv1007_7_gigue.musicxml  bach_bwv1047_1_allegro.musicxml  bach_bwv1047_2_andante.musicxml  bach_bwv1047_3_allegro_assai.musicxml  bach_bwv1068_2_air.musicxml  bach_bwv17-7.musicxml  bach_bwv178-7.musicxml  bach_bwv227-7.musicxml  bach_bwv267.musicxml  bach_bwv269.musicxml  bach_bwv277.musicxml  bach_bwv281.musicxml  (+247 more)
engine/scripts/: check_mypy_baseline.sh  export_corpus_to_samples.py  fetch_humdrum.py  fetch_openscore_lieder.py  freeze.py  generate_catalog_entries.py
engine/tests/: test_arranger.py  test_auto_pedal.py  test_beaming.py  test_brass_endurance.py  test_breath_marks_skill.py  test_canonical_instruments.py  test_clef_switching.py  test_cli.py  test_continuo.py  test_continuo_voice_leading.py  test_difficulty.py  test_difficulty_control.py  test_double_bass.py  test_e2e_golden.py  test_enrich.py  test_ensembles.py  test_explainer.py  test_fingering.py  test_hand_redistribute.py  test_harmony.py  test_harmony_function.py  test_import_formats.py  test_instruments.py  test_instruments_plucked.py  test_ir.py  test_ir_serialize.py  test_ir_to_musicxml.py  test_ir_validate.py  test_llm_eval.py  test_mcp_server.py  test_melody_function.py  test_musicxml_supplement.py  test_musicxml_writer.py  test_new_instruments.py  test_omr_audiveris.py  test_omr_auto_update.py  test_parser.py  test_phrase.py  test_phrase_eval.py  test_phrase_groundtruth.py  (+15 more)
(+116 files in other folders)
