[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "score-arranger-engine"
version = "0.1.0"
description = "Score Arranger Python core engine — IR, parser, analyzer, arranger, validator"
requires-python = ">=3.11"
authors = [{ name = "Score Arranger" }]
dependencies = [
    # Score parsing / round-trip writing — 整個 engine 仰賴的核心庫
    # music21 9.x/10.x API 對我們用到的 part / measure / note / chord 結構相容
    "music21>=9.1,<11",
    # MCP server (Claude Desktop / Cursor 等 AI 透過 MCP 呼叫引擎)
    # 1.x 系列, 用到 Server / stdio_server / Tool / TextContent 等基礎 API
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
